--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Reed/Flash",
+    "name": "reed/flash",
     "description": "Adds a utlitity for easy Session Flash messages.",
     "license": "MIT",
     "keywords": ["laravel", "session", "flash"],
