--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "illuminate/support": "^5.2"
+        "illuminate/support": "5.1.*|5.2.*|5.3.*"
     },
     "autoload": {
         "psr-4": {
